[feature/template-engine] Adjust path in includephp template.
Now that tests are run from top level the '..' is wrong.

PHPBB3-9726

--- a/tests/template/templates/includephp.html
+++ b/tests/template/templates/includephp.html
@@ -1,1 +1,1 @@
-<!-- INCLUDEPHP ../tests/template/templates/_dummy_include.php.inc -->
+<!-- INCLUDEPHP tests/template/templates/_dummy_include.php.inc -->
