[feature/template-engine] Corrected an off-by-one error in nested namespaces.
This error resulted in a dot from the namespace being placed into
variable reference in compiled template code, thus creating bogus
compiled template code.

PHPBB3-9726

--- a/tests/template/templates/loop_nested_multilevel_ref.html
+++ b/tests/template/templates/loop_nested_multilevel_ref.html
@@ -1,8 +1,8 @@
 top-level content
 <!-- BEGIN outer -->
-	outer content
+	outer {outer.VARIABLE}
 	<!-- BEGIN inner -->
-		inner content
+		inner {inner.VARIABLE}
 		<!-- IF outer.inner.S_FIRST_ROW -->
 			first row
 		<!-- ENDIF -->
