[feature/template-engine] Fix negative variable expressions
compile_tag_if had the flawed approach of adding an isset statement for
all variables to the beginning of the if. This fails for negative
expressions, and checking those takes a considerable effort.

The easier solution is to make the variable expression itself
conditional, defaulting to null if it is not set.

Thanks to naderman for the solution.

PHPBB3-9726

--- a/tests/template/templates/if.html
+++ b/tests/template/templates/if.html
@@ -6,6 +6,6 @@
 03
 <!-- ENDIF -->
 
-<!-- IF (S_VALUE > S_OTHER_VALUE) -->
+<!-- IF S_VALUE and S_OTHER_VALUE and (S_VALUE > S_OTHER_VALUE) -->
 04
 <!-- ENDIF -->
