--- a/phpBB/styles/subsilver2/template/index_body.html
+++ b/phpBB/styles/subsilver2/template/index_body.html
@@ -10,8 +10,14 @@
 
 <!-- INCLUDE forumlist_body.html -->
 
-<!-- IF not S_IS_BOT or U_TEAM -->
-<span class="gensmall"><!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a><!-- ENDIF --><!-- IF not S_IS_BOT and U_TEAM --> | <!-- ENDIF --><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a><!-- ENDIF --></span><br />
+<!-- IF not S_IS_BOT or U_TEAM or U_CONTACT_US -->
+<span class="gensmall">
+	<!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a><!-- ENDIF -->
+	<!-- IF not S_IS_BOT and (U_TEAM or U_CONTACT_US) --> | <!-- ENDIF -->
+	<!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a><!-- ENDIF -->
+	<!-- IF U_TEAM and U_CONTACT_US --> | <!-- ENDIF -->
+	<!-- IF U_CONTACT_US --><a href="{U_CONTACT_US}">{L_CONTACT_US}</a><!-- ENDIF -->
+</span><br />
 <!-- ENDIF -->
 
 <br clear="all" />
