[ticket/10155] Add jQuery, introduce global assets path
Add the jQuery JavaScript library to all pages, giving modifications
instant access and allowing for any future core JavaScript to take
advantage of it.

Also introduce a global /assets directory for assets that are shared
between styles.

PHPBB3-10155

--- a/phpBB/styles/prosilver/template/simple_header.html
+++ b/phpBB/styles/prosilver/template/simple_header.html
@@ -13,6 +13,7 @@
 {META}
 <title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{PAGE_TITLE}</title>
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
 <script type="text/javascript">
 // <![CDATA[
 
