--- a/phpBB/styles/subsilver2/template/overall_header.html
+++ b/phpBB/styles/subsilver2/template/overall_header.html
@@ -25,6 +25,7 @@
 
 <link rel="stylesheet" href="{T_STYLESHEET_LINK}" type="text/css" />
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
 <script type="text/javascript">
 // <![CDATA[
 <!-- IF S_USER_PM_POPUP and S_NEW_PM -->
