[ticket/8173] Removed some redundant code in the BBCode JavaScript.
The following code can be found in the ACP, when changing a users
signature:

t: '{ BBCODE_T_HELP }',

The code that uses it and the code that produces it were changed or
removed a while ago, but this code remained. In
2c4c1f925768285995020e08b0e5d13c51a5c388, the accesskey for the list
item button was changed to y from t, explaining the origin of the
redundant code - although it wasn't being used then, either.

This commit also changes the helpline code of "[*]" to y, as the access
key is y, so this makes it more consistant.

PHPBB3-8173

--- a/phpBB/styles/prosilver/template/posting_buttons.html
+++ b/phpBB/styles/prosilver/template/posting_buttons.html
@@ -25,7 +25,7 @@
 		a: '{LA_BBCODE_A_HELP}',
 		s: '{LA_BBCODE_S_HELP}',
 		f: '{LA_BBCODE_F_HELP}',
-		e: '{LA_BBCODE_E_HELP}',
+		y: '{LA_BBCODE_Y_HELP}',
 		d: '{LA_BBCODE_D_HELP}'
 		<!-- BEGIN custom_tags -->
 			,cb_{custom_tags.BBCODE_ID}: '{custom_tags.A_BBCODE_HELPLINE}'
