--- a/phpBB/styles/subsilver2/template/posting_buttons.html
+++ b/phpBB/styles/subsilver2/template/posting_buttons.html
@@ -22,9 +22,8 @@
 			a: '{LA_BBCODE_A_HELP}',
 			s: '{LA_BBCODE_S_HELP}',
 			f: '{LA_BBCODE_F_HELP}',
-			e: '{LA_BBCODE_E_HELP}',
+			y: '{LA_BBCODE_Y_HELP}',
 			d: '{LA_BBCODE_D_HELP}',
-			t: '{LA_BBCODE_T_HELP}',
 			tip: '{L_STYLES_TIP}'
 			<!-- BEGIN custom_tags -->
 				,cb_{custom_tags.BBCODE_ID}: '{custom_tags.A_BBCODE_HELPLINE}'
