[ticket/10260] Remove prosilver styleswitcher
The styleswitcher is an odd invention that allows setting the font size
of the page dynamically via JavaScript (and CSS). This should be done by
browser settings instead.

PHPBB3-10260

--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -491,7 +491,7 @@
 
 /* Sub-header (navigation bar)
 --------------------------------------------- */
-.rtl a.print, .rtl a.sendemail, .rtl a.fontsize {
+.rtl a.print, .rtl a.sendemail {
 	text-align: right;
 }
 
