--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -468,7 +468,7 @@ table.info tbody th {
 
 /* Misc layout styles
 ---------------------------------------- */
-/* column[1-2] styles are containers for two column layouts 
+/* column[1-2] styles are containers for two column layouts
    Also see tweaks.css */
 .column1 {
 	float: left;
@@ -578,6 +578,34 @@ li.pagination {
 	padding: 1px 0 1px 15px;
 	font-size: 0.9em;
 	background: none 0 50% no-repeat;
+}
+
+.row .pagination span a, li.pagination span a {
+	background-color: #FFFFFF;
+}
+
+.row .pagination span a:hover, li.pagination span a:hover {
+	background-color: #d2d2d2;
+}
+
+/* jQuery popups
+---------------------------------------- */
+.jalert {
+	background-color: #FFFFFF;
+	border: 1px solid #999999;
+	display: none;
+	position: fixed;
+	top: 100px;
+	left: 35%;
+	width: 30%;
+	z-index: 50;
+	padding: 25px;
+	padding: 0 25px 20px 25px;
+}
+
+.jalert p {
+	margin: 8px 0;
+	padding-bottom: 8px;
 }
 
 /* Miscellaneous styles
