[ticket/6632] Better viewing of topics for wide screen displays
Also fixes PHPBB3-6458 "Width of Topics and Posts columns in Board Index is causing problems with language packs" by increasing the size to 90px instead of the ~70 it was like. Also tested on RTL languages.

PHPBB3-6458
PHPBB3-6632

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -29,10 +29,15 @@ ul.topiclist li.row dl {
 ul.topiclist dt {
 	display: block;
 	float: left;
-	width: 50%;
+	width: 100%;
 	font-size: 1.1em;
 	padding-left: 5px;
 	padding-right: 5px;
+	margin-right: -465px;
+}
+
+ul.topiclist dt .wrap-content {
+	padding-right: 465px;
 }
 
 ul.topiclist dd {
@@ -96,6 +101,7 @@ li.header dt, li.header dd {
 
 li.header dt {
 	font-weight: bold;
+	margin-right: -465px;
 }
 
 li.header dd {
@@ -126,7 +132,7 @@ dl.icon dt {
 }
 
 dd.posts, dd.topics, dd.views {
-	width: 8%;
+	width: 90px;
 	text-align: center;
 	line-height: 2.2em;
 	font-size: 1.2em;
@@ -145,7 +151,7 @@ dl.icon dt li {
 }
 
 dd.lastpost {
-	width: 25%;
+	width: 230px;
 	font-size: 1.1em;
 }
 
