[ticket/6633] Better viewing of posts for wide screen displays
PHPBB3-6633

--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -117,6 +117,8 @@
 		<div class="inner"><span class="corners-top"><span></span></span>
 
 		<div class="postbody">
+			<div class="wrap-content">
+
 			<!-- IF postrow.S_IGNORE_POST -->
 				<div class="ignore">{postrow.L_IGNORE_POST}</div>
 			<!-- ELSE -->
@@ -166,6 +168,7 @@
 			<!-- IF postrow.SIGNATURE --><div id="sig{postrow.POST_ID}" class="signature">{postrow.SIGNATURE}</div><!-- ENDIF -->
 		<!-- ENDIF -->
 
+			</div>
 		</div>
 
 		<!-- IF not postrow.S_IGNORE_POST -->
