[ticket/6633] Also fix the search result and PM view
PHPBB3-6633

--- a/phpBB/styles/prosilver/template/ucp_pm_viewmessage.html
+++ b/phpBB/styles/prosilver/template/ucp_pm_viewmessage.html
@@ -15,6 +15,7 @@
 <div>
 
 	<div class="postbody">
+		<div class="wrap-content">
 
 		<!-- IF U_DELETE or U_EDIT or U_QUOTE or U_REPORT -->
 		<ul class="profile-icons">
@@ -59,6 +60,7 @@
 		<!-- IF SIGNATURE -->
 			<div id="sig{MESSAGE_ID}" class="signature">{SIGNATURE}</div>
 		<!-- ENDIF -->
+		</div>
 	</div>
 
 	<dl class="postprofile" id="profile{MESSAGE_ID}">
