--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -234,8 +234,13 @@ div[class].topic-actions {
 	clear: both;
 	margin-right: -275px;
 }
+
 .postbody .wrap-content {
 	padding-right: 275px;
+}
+
+.search .postbody .wrap-content {
+	padding-right: 205px;
 }
 
 .postbody .ignore {
@@ -268,7 +273,7 @@ div[class].topic-actions {
 }
 
 .search .postbody {
-	width: 68%
+	margin-right: -205px;
 }
 
 /* Topic review panel
@@ -772,7 +777,7 @@ fieldset.polls dd div {
 
 /* Poster profile used by search*/
 .search .postprofile {
-	width: 30%;
+	width: 200px;
 }
 
 /* pm list in compose message if mass pm is enabled */
