[ticket/10155] Move jQuery inclusion to footer
PHPBB3-10155

--- a/phpBB/styles/subsilver2/template/overall_footer.html
+++ b/phpBB/styles/subsilver2/template/overall_footer.html
@@ -8,5 +8,7 @@
 	<!-- IF DEBUG_OUTPUT --><br /><bdo dir="ltr">[ {DEBUG_OUTPUT} ]</bdo><!-- ENDIF --></span>
 </div>
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
+
 </body>
 </html>
