--- a/phpBB/styles/subsilver2/template/simple_footer.html
+++ b/phpBB/styles/subsilver2/template/simple_footer.html
@@ -5,5 +5,7 @@
 	<span class="copyright">Powered by <a href="http://www.phpbb.com/">phpBB</a>&reg; Forum Software &copy; phpBB Group</span>
 </div>
 
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
+
 </body>
 </html>
