--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -266,7 +266,7 @@
 <!-- INCLUDE jumpbox.html -->
 
 <!-- IF S_TOPIC_MOD -->
-	<form method="post" action="{S_MOD_ACTION}">
+	<form method="post" action="{S_MOD_ACTION}" id="quickmodform">
 	<fieldset class="quickmod">
 		<label for="quick-mod-select">{L_QUICK_MOD}:</label> {S_TOPIC_MOD} <input type="submit" value="{L_GO}" class="button2" />
 		{S_FORM_TOKEN}
