[ticket/10271] Added ability for exceptions to phpbb.ajaxify.
Also made it easy for additional options to be added in the future.

PHPBB3-10271

--- a/phpBB/styles/prosilver/template/viewtopic_body.html
+++ b/phpBB/styles/prosilver/template/viewtopic_body.html
@@ -263,7 +263,7 @@
 <!-- INCLUDE jumpbox.html -->
 
 <!-- IF .quickmod -->
-	<form method="post" action="{S_MOD_ACTION}">
+	<form method="post" action="{S_MOD_ACTION}" id="quickmodform">
 	<fieldset class="quickmod">
 		<label for="quick-mod-select">{L_QUICK_MOD}:</label>
 		<select name="action" id="quick-mod-select">
