--- a/phpBB/styles/subsilver2/template/mcp_move.html
+++ b/phpBB/styles/subsilver2/template/mcp_move.html
@@ -20,7 +20,7 @@
 					<input type="checkbox" class="radio" name="move_leave_shadow" checked="checked" /><span class="gen">{L_LEAVE_SHADOW}</span><br />
 				<!-- ENDIF -->
 				<!-- IF S_CAN_LOCK_TOPIC -->
-					<input type="checkbox" class="radio" name="move_lock_topics" checked="checked" /><span class="gen">{L_LOCK_TOPIC}</span><br />
+					<input type="checkbox" class="radio" name="move_lock_topics" /><span class="gen">{L_LOCK_TOPIC}</span><br />
 				<!-- ENDIF -->
 				<br />{S_HIDDEN_FIELDS}<span class="gen">{MESSAGE_TEXT}</span><br /><br />
 				<input type="submit" name="confirm" value="{YES_VALUE}" class="btnmain" />&nbsp;&nbsp;<input type="submit" name="cancel" value="{L_NO}" class="btnlite" />
