--- a/phpBB/styles/prosilver/theme/links.css
+++ b/phpBB/styles/prosilver/theme/links.css
@@ -148,8 +148,8 @@ a.topictitle:active {
 a.top {
 	background: none no-repeat top left;
 	text-decoration: none;
-	width: {IMG_ICON_BACK_TOP_WIDTH}px;
-	height: {IMG_ICON_BACK_TOP_HEIGHT}px;
+	width: 11px;
+	height: 11px;
 	display: block;
 	float: right;
 	overflow: hidden;
