--- a/phpBB/styles/subsilver2/template/overall_header.html
+++ b/phpBB/styles/subsilver2/template/overall_header.html
@@ -18,6 +18,7 @@
 <!-- ENDIF -->
 
 <link rel="stylesheet" href="{T_STYLESHEET_LINK}" type="text/css" />
+<link rel="stylesheet" href="{T_STYLESHEET_LANG_LINK}" type="text/css" />
 
 <script type="text/javascript">
 // <![CDATA[
@@ -142,7 +143,7 @@ function marklist(id, name, state)
 	<div id="logodesc">
 		<table width="100%" cellspacing="0">
 		<tr>
-			<td><a href="{U_INDEX}">{SITE_LOGO_IMG}</a></td>
+			<td><a href="{U_INDEX}" class="imageset">{SITE_LOGO_IMG}</a></td>
 			<td width="100%" align="center"><h1>{SITENAME}</h1><span class="gen">{SITE_DESCRIPTION}</span></td>
 		</tr>
 		</table>
