--- a/phpBB/styles/subsilver2/theme/stylesheet.css
+++ b/phpBB/styles/subsilver2/theme/stylesheet.css
@@ -674,3 +674,428 @@ pre {
 .username-coloured {
 	font-weight: bold;
 }
+
+
+/* Former imageset */
+span.imageset {
+	display: inline-block;
+	background: transparent none 0 0 no-repeat;
+	margin: 0;
+	padding: 0;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+}
+a.imageset {
+	text-decoration: none !important;
+}
+
+/* Global imageset items */
+.imageset.site_logo {
+	background-image: url("./images/site_logo.gif");
+	padding-left: 170px;
+	padding-top: 94px;
+}
+.imageset.upload_bar {
+	background-image: url("./images/upload_bar.gif");
+	padding-left: 280px;
+	padding-top: 16px;
+}
+.imageset.poll_left {
+	background-image: url("./images/poll_left.gif");
+	padding-left: 4px;
+	padding-top: 12px;
+}
+.imageset.poll_center {
+	background-image: url("./images/poll_center.gif");
+	padding-left: 1px;
+	padding-top: 12px;
+}
+.imageset.poll_right {
+	background-image: url("./images/poll_right.gif");
+	padding-left: 4px;
+	padding-top: 12px;
+}
+.imageset.forum_link {
+	background-image: url("./images/forum_link.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_read {
+	background-image: url("./images/forum_read.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_read_locked {
+	background-image: url("./images/forum_read_locked.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_read_subforum {
+	background-image: url("./images/forum_read_subforum.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_unread {
+	background-image: url("./images/forum_unread.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_unread_locked {
+	background-image: url("./images/forum_unread_locked.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.forum_unread_subforum {
+	background-image: url("./images/forum_unread_subforum.gif");
+	padding-left: 46px;
+	padding-top: 25px;
+}
+.imageset.topic_moved {
+	background-image: url("./images/topic_moved.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read {
+	background-image: url("./images/topic_read.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read_mine {
+	background-image: url("./images/topic_read_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read_hot {
+	background-image: url("./images/topic_read_hot.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read_hot_mine {
+	background-image: url("./images/topic_read_hot_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read_locked {
+	background-image: url("./images/topic_read_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_read_locked_mine {
+	background-image: url("./images/topic_read_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread {
+	background-image: url("./images/topic_unread.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread_mine {
+	background-image: url("./images/topic_unread_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread_hot {
+	background-image: url("./images/topic_unread_hot.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread_hot_mine {
+	background-image: url("./images/topic_unread_hot_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread_locked {
+	background-image: url("./images/topic_unread_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.topic_unread_locked_mine {
+	background-image: url("./images/topic_unread_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_read {
+	background-image: url("./images/sticky_read.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_read_mine {
+	background-image: url("./images/sticky_read_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_read_locked {
+	background-image: url("./images/sticky_read_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_read_locked_mine {
+	background-image: url("./images/sticky_read_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_unread {
+	background-image: url("./images/sticky_unread.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_unread_mine {
+	background-image: url("./images/sticky_unread_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_unread_locked {
+	background-image: url("./images/sticky_unread_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.sticky_unread_locked_mine {
+	background-image: url("./images/sticky_unread_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_read {
+	background-image: url("./images/announce_read.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_read_mine {
+	background-image: url("./images/announce_read_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_read_locked {
+	background-image: url("./images/announce_read_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_read_locked_mine {
+	background-image: url("./images/announce_read_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_unread {
+	background-image: url("./images/announce_unread.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_unread_mine {
+	background-image: url("./images/announce_unread_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_unread_locked {
+	background-image: url("./images/announce_unread_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.announce_unread_locked_mine {
+	background-image: url("./images/announce_unread_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_read {
+	background-image: url("./images/announce_read.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_read_mine {
+	background-image: url("./images/announce_read_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_read_locked {
+	background-image: url("./images/announce_read_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_read_locked_mine {
+	background-image: url("./images/announce_read_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_unread {
+	background-image: url("./images/announce_unread.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_unread_mine {
+	background-image: url("./images/announce_unread_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_unread_locked {
+	background-image: url("./images/announce_unread_locked.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.global_unread_locked_mine {
+	background-image: url("./images/announce_unread_locked_mine.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.pm_read {
+	background-image: url("./images/topic_read.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.pm_unread {
+	background-image: url("./images/topic_unread.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.icon_post_target {
+	background-image: url("./images/icon_post_target.gif");
+	padding-left: 12px;
+	padding-top: 9px;
+}
+.imageset.icon_post_target_unread {
+	background-image: url("./images/icon_post_target_unread.gif");
+	padding-left: 12px;
+	padding-top: 9px;
+}
+.imageset.icon_topic_attach {
+	background-image: url("./images/icon_topic_attach.gif");
+	padding-left: 14px;
+	padding-top: 18px;
+}
+.imageset.icon_topic_latest {
+	background-image: url("./images/icon_topic_latest.gif");
+	padding-left: 18px;
+	padding-top: 9px;
+}
+.imageset.icon_topic_newest {
+	background-image: url("./images/icon_topic_newest.gif");
+	padding-left: 18px;
+	padding-top: 9px;
+}
+.imageset.icon_topic_reported {
+	background-image: url("./images/icon_topic_reported.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+.imageset.icon_topic_unapproved {
+	background-image: url("./images/icon_topic_unapproved.gif");
+	padding-left: 19px;
+	padding-top: 18px;
+}
+
+
+/* English images for fallback */
+.imageset.icon_contact_aim {
+	background-image: url("./en/icon_contact_aim.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_email {
+	background-image: url("./en/icon_contact_email.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_icq {
+	background-image: url("./en/icon_contact_icq.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_jabber {
+	background-image: url("./en/icon_contact_jabber.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_msnm {
+	background-image: url("./en/icon_contact_msnm.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_pm {
+	background-image: url("./en/icon_contact_pm.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_yahoo {
+	background-image: url("./en/icon_contact_yahoo.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_contact_www {
+	background-image: url("./en/icon_contact_www.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_post_delete {
+	background-image: url("./en/icon_post_delete.gif");
+	padding-left: 20px;
+	padding-top: 20px;
+}
+.imageset.icon_post_edit {
+	background-image: url("./en/icon_post_edit.gif");
+	padding-left: 90px;
+	padding-top: 20px;
+}
+.imageset.icon_post_info {
+	background-image: url("./en/icon_post_info.gif");
+	padding-left: 20px;
+	padding-top: 20px;
+}
+.imageset.icon_post_quote {
+	background-image: url("./en/icon_post_quote.gif");
+	padding-left: 90px;
+	padding-top: 20px;
+}
+.imageset.icon_post_report {
+	background-image: url("./en/icon_post_report.gif");
+	padding-left: 20px;
+	padding-top: 20px;
+}
+.imageset.icon_user_online {
+	background-image: url("./en/icon_user_online.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_user_offline {
+	background-image: url("./en/icon_user_offline.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_user_profile {
+	background-image: url("./en/icon_user_profile.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_user_search {
+	background-image: url("./en/icon_user_search.gif");
+	padding-left: 72px;
+	padding-top: 20px;
+}
+.imageset.icon_user_warn {
+	background-image: url("./en/icon_user_warn.gif");
+	padding-left: 20px;
+	padding-top: 20px;
+}
+.imageset.button_pm_new {
+	background-image: url("./en/button_pm_new.gif");
+	padding-left: 97px;
+	padding-top: 27px;
+}
+.imageset.button_pm_reply {
+	background-image: url("./en/button_pm_reply.gif");
+	padding-left: 90px;
+	padding-top: 20px;
+}
+.imageset.button_topic_locked {
+	background-image: url("./en/button_topic_locked.gif");
+	padding-left: 97px;
+	padding-top: 27px;
+}
+.imageset.button_topic_new {
+	background-image: url("./en/button_topic_new.gif");
+	padding-left: 97px;
+	padding-top: 27px;
+}
+.imageset.button_topic_reply {
+	background-image: url("./en/button_topic_reply.gif");
+	padding-left: 97px;
+	padding-top: 27px;
+}
