--- a/phpBB/styles/prosilver/template/overall_footer.html
+++ b/phpBB/styles/prosilver/template/overall_footer.html
@@ -29,9 +29,6 @@
 		<div id="darken">&nbsp;</div>
 		<div class="jalert" id="loadingalert"><h3>{L_LOADING}</h3><p>{L_PLEASE_WAIT}</p></div>
 	</div>
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script src="styles/script.js"></script>
 </div>
 
 </div>
@@ -42,6 +39,7 @@
 </div>
 
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
+<script type="text/javascript" src="styles/script.js"></script>
 
 </body>
 </html>
