--- a/phpBB/styles/prosilver/template/simple_header.html
+++ b/phpBB/styles/prosilver/template/simple_header.html
@@ -56,5 +56,5 @@
 <body id="phpbb" class="{S_CONTENT_DIRECTION}">
 
 <div id="simple-wrap">
-	<a id="top" name="top" accesskey="t"></a>
+	<a id="top" accesskey="t"></a>
 	<div id="page-body">
