--- a/phpBB/styles/prosilver/template/viewtopic_print.html
+++ b/phpBB/styles/prosilver/template/viewtopic_print.html
@@ -13,7 +13,7 @@
 
 <body id="phpbb">
 <div id="wrap">
-	<a id="top" name="top" accesskey="t"></a>
+	<a id="top" accesskey="t"></a>
 
 	<div id="page-header">
 		<h1>{SITENAME}</h1>
