HTML5 Fixes - Remove NAME from anchor tags in Subsilver2

--- a/phpBB/styles/subsilver2/template/faq_body.html
+++ b/phpBB/styles/subsilver2/template/faq_body.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE overall_header.html -->
 
-<a name="faqtop"></a>
+<a id="faqtop"></a>
 
 <div id="pagecontent">
 
@@ -38,7 +38,7 @@
 			<!-- ELSE -->
 				<td class="row2" valign="top">
 			<!-- ENDIF -->
-				<div class="postbody"><a name="f{faq_block.S_ROW_COUNT}r{faq_block.faq_row.S_ROW_COUNT}"></a><b>&#187; {faq_block.faq_row.FAQ_QUESTION}</b></div>
+				<div class="postbody"><a id="f{faq_block.S_ROW_COUNT}r{faq_block.faq_row.S_ROW_COUNT}"></a><b>&#187; {faq_block.faq_row.FAQ_QUESTION}</b></div>
 				<div class="postbody">{faq_block.faq_row.FAQ_ANSWER}</div>
 				<p class="gensmall"><a href="#faqtop">{L_BACK_TO_TOP}</a></p>
 			</td>
