--- a/phpBB/styles/subsilver2/template/overall_header.html
+++ b/phpBB/styles/subsilver2/template/overall_header.html
@@ -135,7 +135,7 @@ function marklist(id, name, state)
 </head>
 <body class="{S_CONTENT_DIRECTION}">
 
-<a name="top"></a>
+<a id="top"></a>
 
 <div id="wrapheader">
 
