[ticket/10362] Revert subsilver2 changes
If subsilver2 will remain at XHTML then we do not need to make any
changes to its files.

PHPBB3-10362

--- a/phpBB/styles/subsilver2/template/mcp_post.html
+++ b/phpBB/styles/subsilver2/template/mcp_post.html
@@ -139,7 +139,7 @@
 	<!-- IF S_TOPIC_REVIEW --><!-- INCLUDE posting_topic_review.html --><!-- ENDIF -->
 <!-- ELSE -->
 	<!-- IF S_CAN_LOCK_POST or S_CAN_DELETE_POST or S_CAN_CHGPOSTER -->
-		<br /><a id="mod"></a>
+		<br /><a name="mod"></a>
 
 		<table width="100%" cellpadding="3" cellspacing="1" border="0" class="tablebg">
 		<tr>
@@ -161,7 +161,7 @@
 	<!-- ENDIF -->
 
 	<!-- IF S_CAN_VIEWIP -->
-		<br /><a id="ip"></a>
+		<br /><a name="ip"></a>
 
 		<table width="100%" cellpadding="3" cellspacing="1" border="0" class="tablebg">
 		<tr>
