--- a/phpBB/styles/subsilver2/template/ucp_pm_history.html
+++ b/phpBB/styles/subsilver2/template/ucp_pm_history.html
@@ -18,7 +18,7 @@
 		</tr>
 	<!-- BEGIN history_row -->
 			<!-- IF history_row.S_ROW_COUNT is even --><tr class="row1"><!-- ELSE --><tr class="row2"><!-- ENDIF -->
-			<td rowspan="2" align="{S_CONTENT_FLOW_BEGIN}" valign="top"><a id="{history_row.MSG_ID}"></a>
+			<td rowspan="2" align="{S_CONTENT_FLOW_BEGIN}" valign="top"><a name="{history_row.MSG_ID}"></a>
 				<table width="150" cellspacing="0">
 				<tr>
 					<td align="center" colspan="2"><span class="postauthor">{history_row.MESSAGE_AUTHOR_FULL}</span></td>
