--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -661,12 +661,7 @@ Colours and backgrounds for buttons.css
 -------------------------------------------------------------- */
 
 /* Big button images */
-.reply-icon span	{ background-image: url("./en/button_topic_reply.gif"); }
-.post-icon span		{ background-image: url("./en/button_topic_new.gif"); }
-.locked-icon span	{ background-image: url("./en/button_topic_locked.gif"); }
-.pmreply-icon span	{ background-image: url("./en/button_pm_reply.gif") ;}
-.newpm-icon span 	{ background-image: url("./en/button_pm_new.gif") ;}
-.forwardpm-icon span	{ background-image: url("./en/button_pm_forward.gif") ;}
+.buttons div a	{ color: #D31141; }
 
 a.print {
 	background-image: url("./images/icon_print.gif");
