[feature/ajax] Moved script.js into a few different files.
Seperated it into: assets/javascript/core.js,
styles/prosilver/template/ajax.js and adm/style/ajax.js.

--- a/phpBB/styles/prosilver/template/overall_footer.html
+++ b/phpBB/styles/prosilver/template/overall_footer.html
@@ -39,7 +39,8 @@
 </div>
 
 <script type="text/javascript" src="{T_ASSETS_PATH}/javascript/jquery.js"></script>
-<script type="text/javascript" src="styles/script.js"></script>
+<script type="text/javascript" src="{T_ASSETS_PATH}/javascript/core.js"></script>
+<script type="text/javascript" src="{T_TEMPLATE_PATH}/ajax.js"></script>
 
 </body>
 </html>
