--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -505,7 +505,7 @@
 }
 
 /* On rtl languages, the ".buttons div" and ".buttons div a" change their functions!
-While on ltr the div is just the starting boarder, on rtl it contains the icon.
+While on ltr the div is just the starting border, on rtl it contains the icon.
 So we need to overwrite the background positions for all "div a"
 and set the background-positions for the "div" */
 .rtl .buttons div:hover a { background-position: 100% -25px; }
@@ -570,6 +570,65 @@ and set the background-positions for the "div" */
 .rtl .postprofile ul.profile-icons li {
 	float: right;
 	margin: 0 0 3px 6px;
+}
+
+.rtl ul.profile-icons li.edit-icon,
+.rtl ul.profile-icons li.quote-icon {
+	float: right;
+	margin: 0 0 3px 6px;
+	background-image: url("./images/buttons_sprites_rtl.png");
+}
+
+.rtl ul.profile-icons li.edit-icon {
+	background-position: 100% -380px;
+}
+.rtl ul.profile-icons li.quote-icon {
+	background-position: 100% -420px;
+}
+
+.rtl ul.profile-icons li.edit-icon a,
+.rtl ul.profile-icons li.quote-icon a,
+.rtl ul.profile-icons li.edit-icon a:hover,
+.rtl ul.profile-icons li.quote-icon a:hover {
+	background-image: url("./images/buttons_sprites_rtl.png");
+}
+
+.rtl ul.profile-icons li.edit-icon a span,
+.rtl ul.profile-icons li.quote-icon a span {
+	margin: 0 13px 0 5px; /* left and right background */
+	padding: 1px 3px 0 5px;
+	background-position: 50% -50px;
+}
+
+/* smaller margin for the asterix */
+.rtl ul.profile-icons li.edit-icon a span {
+	margin: 0 11px 0 5px; /* left and right background */
+}
+
+.rtl ul.profile-icons li.edit-icon:hover a span,
+.rtl ul.profile-icons li.quote-icon:hover a span {
+	background-position: 0 -70px;
+}
+
+.rtl ul.profile-icons li.edit-icon:hover {
+	background-position: 100% -400px;
+}
+.rtl ul.profile-icons li.quote-icon:hover {
+	background-position: 100% -440px;
+}
+
+.rtl ul.profile-icons li.edit-icon a,
+.rtl ul.profile-icons li.quote-icon a {
+	background-position: 0 -340px;
+}
+.rtl ul.profile-icons li.edit-icon:hover a,
+.rtl ul.profile-icons li.quote-icon:hover a {
+	background-position: 0 -360px;
+}
+
+.rtl ul.profile-icons li.edit-icon a span,
+.rtl ul.profile-icons li.quote-icon a span {
+	padding-right: 0;
 }
 
 /* Positioning of moderator icons */
